--- a/Logistica/Planear.html
+++ b/Logistica/Planear.html
@@ -266,10 +266,27 @@
                 </div>
                 <div class="info-column">
                     <div class="info-detail max-height">
-                        <h6>Fecha y hora planeada: </h6><input type="datetime-local">
+                        <h6>Fecha y hora planeada: </h6><input type="datetime-local" class="form-control-sm ">
                     </div>
                     <div class="info-detail max-height">
-                        <h6>Transportista:</h6><select>
+                        <h6>Transportista:</h6>
+                        <select class="form-control-sm ">
+                            <optgroup label="This is a group" >
+                                <option value="12" selected="">This is item 1</option>
+                                <option value="13">This is item 2</option>
+                                <option value="14">This is item 3</option>
+                            </optgroup>
+                        </select>
+                    </div>
+                    <div class="info-detail max-height">
+                        <h6>Peso (kg):</h6><input type="number" placeholder="Type here " class="form-control-sm border ">
+                    </div>
+                    <div class="info-detail max-height">
+                        <h6>Volúmen (m3):</h6><input type="number" placeholder="Type here" class="form-control-sm border ">
+                    </div>
+                    <div class="info-detail max-height">
+                        <h6>Paletizado:</h6>
+                        <select class="form-control-sm ">
                             <optgroup label="This is a group">
                                 <option value="12" selected="">This is item 1</option>
                                 <option value="13">This is item 2</option>
@@ -278,13 +295,8 @@
                         </select>
                     </div>
                     <div class="info-detail max-height">
-                        <h6>Peso (kg):</h6><input type="number">
-                    </div>
-                    <div class="info-detail max-height">
-                        <h6>Volúmen (m3):</h6><input type="number">
-                    </div>
-                    <div class="info-detail max-height">
-                        <h6>Paletizado:</h6><select>
+                        <h6>Lugar inicial:</h6>
+                        <select  class="form-control-sm " >
                             <optgroup label="This is a group">
                                 <option value="12" selected="">This is item 1</option>
                                 <option value="13">This is item 2</option>
@@ -293,16 +305,8 @@
                         </select>
                     </div>
                     <div class="info-detail max-height">
-                        <h6>Lugar inicial:</h6><select>
-                            <optgroup label="This is a group">
-                                <option value="12" selected="">This is item 1</option>
-                                <option value="13">This is item 2</option>
-                                <option value="14">This is item 3</option>
-                            </optgroup>
-                        </select>
-                    </div>
-                    <div class="info-detail max-height">
-                        <h6>Lugar final:</h6><select>
+                        <h6>Lugar final:</h6>
+                        <select  class="form-control-sm ">
                             <optgroup label="This is a group">
                                 <option value="12" selected="">This is item 1</option>
                                 <option value="13">This is item 2</option>
