--- a/Logistica/Movimientos.html
+++ b/Logistica/Movimientos.html
@@ -117,20 +117,20 @@
         <div id="content" class="content-column">
             <div class="tarjeta row-direction">
                 <div>
-                    <h6>Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search" class="search-input" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                    <h6 class="fw-bold mb-2">Buscar:</h6>
+                    <div class="input-div search"><input type="search" id="input-search" class="search-input" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search form-control-sm">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
                         </svg></div>
                 </div>
                 <div>
-                    <h6>Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input" type="date"></div>
+                    <h6 class="mb-2 fw-bold">Fecha inicial:</h6>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
                 </div>
                 <div>
-                    <h6>Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input" type="date"></div>
+                    <h6 class="mb-2 fw-bold">Fecha final:</h6>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
@@ -189,9 +189,9 @@
                     <h4>Detalles de movimiento</h4>
                     <div class="corner-group"><button class="btn" id="btnCancelarMovimiento" type="button">Cancelar</button><button class="btn btn-primary" id="btnGuardarMovimiento" type="button">Guardar</button><button class="btn b" id="btnEditarMovimiento" type="button">Editar</button></div>
                 </div>
-                <h6>Condiciones de entrega:</h6>
+                <h6 class="fw-bold">Condiciones de entrega:</h6>
                 <p class="long-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Vivamus tempus mi risus, et euismod magna rhoncus a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br>Donec quis ligula orci. </p>
-                <h6>Guías:&nbsp;<span id="countGuias">n</span></h6>
+                <h6 class="fw-bold">Guías:&nbsp;<span id="countGuias">n</span></h6>
                 <div class="table-responsive" id="tblGuias">
                     <table class="table">
                         <thead>
@@ -212,17 +212,17 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="info-even-row">
+                <div class="info-even-row my-3 ">
                     <div id="OCClientes-grupo">
-                        <h6>OC clientes:&nbsp;<span id="countOCClientes">n</span></h6>
+                        <h6 class="fw-bold mb-2">OC clientes:&nbsp;<span id="countOCClientes">n</span></h6>
                         <div class="list-group"><a class="list-group-item list-group-item-action"><span>Número de OC</span></a><a class="list-group-item list-group-item-action"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a><a class="list-group-item list-group-item-action link-p"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a></div>
                     </div>
                     <div id="OCProveedores-grupo">
-                        <h6>OC proveedores:&nbsp;<span id="countOCProveedores">n</span></h6>
+                        <h6 class="fw-bold mb-2">OC proveedores:&nbsp;<span id="countOCProveedores">n</span></h6>
                         <div class="list-group"><a class="list-group-item list-group-item-action"><span>Número de OC</span></a><a class="list-group-item list-group-item-action"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a><a class="list-group-item list-group-item-action link-p"><span><span style="color: rgb(58, 58, 60); background-color: rgb(255, 255, 255);">Número de OC</span></span></a></div>
                     </div>
                 </div>
-                <h6>Productos en movimiento: n</h6>
+                <h6  class="fw-bold ">Productos en movimiento: n</h6>
                 <div class="table-responsive" id="tblProducto">
                     <table class="table">
                         <thead>
