--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -113,22 +113,25 @@
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Compras: Req con planilla</h3>
-            <div class="corner-group"><a class="btn" role="button" id="btnDevolver">Devolver con observaciones</a><a class="btn btn-primary" role="button" id="btnEnviar">Enviar ofertas listas</a></div>
+            <div class="corner-group"><a class="btn fw-semibold" role="button" id="btnDevolver">Devolver con observaciones</a><a class="btn btn-primary fw-semibold " role="button" id="btnEnviar">Enviar ofertas listas</a></div>
         </div>
         <div id="content" class="content-column">
-            <div>
-                <div class="btn-group flex-column" role="group"><button class="btn" id="btnVistaProductos" type="button">Por producto</button><button class="btn" id="btnVistaProveedores" type="button">Por proveedor</button></div>
+            <div class=" flex  gap-4">
+                <div class="btn-group flex-column" role="group">
+                    <button class="btn fw-semibold" id="btnVistaProductos" type="button">Por producto</button>
+                    <button class="btn fw-semibold" id="btnVistaProveedores" type="button">Por proveedor</button>
+                </div>
                 <div id="inforReq" class="tarjeta row-direction">
-                    <div>
-                        <h4>Info R2024-871</h4>
-                        <div class="info-detail">
+                    <div class="d-flex gap-2 flex-column">
+                        <h4 class="">Info R2024-871</h4>
+                        <div class="info-detail ">
                             <h6>Progreso:</h6>
                             <div class="progress" id="barProgreso">
                                 <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="d-flex gap-2 flex-column" >
                         <div class="info-detail">
                             <h6>Nombre:</h6>
                             <p id="infoNombre">Bolsas para Herramientas</p>
@@ -138,7 +141,7 @@
                             <p id="infoCliente">Ferreyros S.A.</p>
                         </div>
                     </div>
-                    <div>
+                    <div class="d-flex gap-2 flex-column">
                         <div class="info-detail">
                             <h6>Prioridad:</h6>
                             <p id="infoPrioridad">Baja</p>
@@ -153,7 +156,7 @@
             <div id="divProductos" class="tarjeta">
                 <div class="card-title-group">
                     <h4>Productos:&nbsp;<span id="countProductos">n</span></h4>
-                    <div class="corner-group"><button class="btn" id="btnCancelarProducto" type="button">Cancelar</button><button class="btn" id="btnDescargarProducto" type="button">Descargar productos</button><button class="btn b" id="btnEditarProducto" type="button">Editar</button><button class="btn btn-primary" id="btnGuardarProducto" type="button">Guardar</button></div>
+                    <div class="corner-group"><button class="btn fw-semibold" id="btnCancelarProducto" type="button">Cancelar</button><button class="btn fw-semibold" id="btnDescargarProducto" type="button">Descargar productos</button><button class="btn fw-semibold" id="btnEditarProducto" type="button">Editar</button><button class="btn btn-primary fw-semibold" id="btnGuardarProducto" type="button">Guardar</button></div>
                 </div>
                 <div class="table-responsive" id="tblProductosOfrecidos">
                     <table class="table">
@@ -233,12 +236,12 @@
                 <div class="card-title-group">
                     <div>
                         <h4>Buscar productos en historial:&nbsp;</h4>
-                        <div class="input-div search"><input type="search" id="input-search" class="search-input" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                        <div class="input-div search mt-3"><input type="search" id="input-search" class="search-input form-control-sm" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                                 <path d="M21 21l-6 -6"></path>
                             </svg></div>
-                    </div><button class="btn" id="btnReofrecer" type="button">Volver a ofrecer productos</button>
+                    </div><button class="btn fw-semibold" id="btnReofrecer" type="button">Volver a ofrecer productos</button>
                 </div>
                 <div class="table-responsive" id="tblProductosHistorial">
                     <table class="table">
@@ -321,7 +324,7 @@
             </div>
             <div id="divOfertas" class="tarjeta">
                 <div class="card-title-group">
-                    <h4>Ofertas:&nbsp;<span id="countOfertas">n</span></h4><button class="btn" id="btnNuevaOferta" type="button">Añadir oferta</button>
+                    <h4>Ofertas:&nbsp;<span id="countOfertas">n</span></h4><button class="btn fw-semibold" id="btnNuevaOferta" type="button">Añadir oferta</button>
                 </div>
                 <div class="table-responsive" id="tblOfertas">
                     <table class="table">
@@ -356,11 +359,11 @@
             <div id="divDetalleOferta" class="tarjeta">
                 <div class="card-title-group">
                     <h4>Detalles de oferta</h4>
-                    <div class="corner-group"><button class="btn" id="btnCancelarOferta" type="button">Cancelar</button><button class="btn btn-primary" id="btnGuardarOferta" type="button">Guardar</button><button class="btn b" id="btnEditarOferta" type="button">Editar</button></div>
+                    <div class="corner-group"><button class="btn fw-semibold" id="btnCancelarOferta" type="button">Cancelar</button><button class="btn btn-primary fw-semibold" id="btnGuardarOferta" type="button">Guardar</button><button class="btn b fw-semibold" id="btnEditarOferta" type="button">Editar</button></div>
                 </div>
                 <div id="seleccionarProveedor">
-                    <div class="btn-search-group"><button class="btn" id="btnNuevoProveedor" type="button" data-bs-target="#modal-cliente" data-bs-toggle="modal">+ Proveedor</button>
-                        <div class="input-div search"><input type="search" id="input-search-Proveedor" class="search-input" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                    <div class="btn-search-group mb-3"><button class="btn fw-semibold" id="btnNuevoProveedor" type="button" data-bs-target="#modal-cliente" data-bs-toggle="modal">+ Proveedor</button>
+                        <div class="input-div search"><input type="search" id="input-search-Proveedor" class="search-input form-control" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                                 <path d="M21 21l-6 -6"></path>
@@ -427,18 +430,18 @@
                         <p id="ofertaFechaRegistro">12/08/2024 12:10:00</p>
                     </div>
                     <div class="info-detail">
-                        <h6>Moneda:</h6><select id="ofertaMoneda">
+                        <h6>Moneda:</h6><select id="ofertaMoneda" class="form-control-sm">
                             <option value="Nuevo sol">Nuevo sol</option>
                             <option value="Dólares">Dólares</option>
                         </select>
                     </div>
                     <div class="info-detail">
-                        <h6>Oferta PDF</h6><input type="file" id="ofertaPDF">
+                        <h6>Oferta PDF</h6><input type="file" id="ofertaPDF" class="form-control">
                     </div>
                 </div>
                 <div class="info-detail">
-                    <h6>Planilla:</h6>
-                    <div class="corner-group"><button class="btn" id="btnCargaMasiva" type="button">Carga masiva</button><button class="btn" id="btnNuevoProducto" type="button">Añadir producto</button></div>
+                    <h6 class="fw-bold">Planilla:</h6>
+                    <div class="corner-group"><button class="btn fw-semibold" id="btnCargaMasiva" type="button">Carga masiva</button><button class="btn fw-semibold" id="btnNuevoProducto" type="button">Añadir producto</button></div>
                 </div>
                 <div class="table-responsive" id="tblProductosEnOferta">
                     <table class="table">
@@ -459,14 +462,14 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><select>
+                                <td><select class="form-control-sm">
                                         <optgroup label="This is a group">
                                             <option value="12" selected="">This is item 1</option>
                                             <option value="13">This is item 2</option>
                                             <option value="14">This is item 3</option>
                                         </optgroup>
                                     </select></td>
-                                <td><select>
+                                <td><select class="form-control-sm">
                                         <optgroup label="This is a group">
                                             <option value="12" selected="">This is item 1</option>
                                             <option value="13">This is item 2</option>
@@ -478,20 +481,20 @@
                                 <td>Cell</td>
                                 <td>Cell</td>
                                 <td>Cell</td>
-                                <td><input type="number"></td>
+                                <td><input class="form-control-sm border" placeholder="Type here" type="number"></td>
                                 <td>Cell</td>
                                 <td><input type="file"></td>
                                 <td><input type="file"></td>
                             </tr>
                             <tr>
-                                <td><select>
+                                <td><select class="form-control-sm">
                                         <optgroup label="This is a group">
                                             <option value="12" selected="">This is item 1</option>
                                             <option value="13">This is item 2</option>
                                             <option value="14">This is item 3</option>
                                         </optgroup>
                                     </select></td>
-                                <td><select>
+                                <td><select class="form-control-sm">
                                         <optgroup label="This is a group">
                                             <option value="12" selected="">This is item 1</option>
                                             <option value="13">This is item 2</option>
@@ -503,20 +506,20 @@
                                 <td>Cell</td>
                                 <td>Cell</td>
                                 <td>Cell</td>
-                                <td><input type="number"></td>
+                                <td><input class="form-control-sm border" placeholder="Type here" type="number"></td>
                                 <td>Cell</td>
                                 <td><input type="file"></td>
                                 <td><input type="file"></td>
                             </tr>
                             <tr>
-                                <td><select>
+                                <td><select class="form-control-sm">
                                         <optgroup label="This is a group">
                                             <option value="12" selected="">This is item 1</option>
                                             <option value="13">This is item 2</option>
                                             <option value="14">This is item 3</option>
                                         </optgroup>
                                     </select></td>
-                                <td><select>
+                                <td><select class="form-control-sm">
                                         <optgroup label="This is a group">
                                             <option value="12" selected="">This is item 1</option>
                                             <option value="13">This is item 2</option>
@@ -527,11 +530,11 @@
                                 <td>Cell</td>
                                 <td>Cell</td>
                                 <td>Cell</td>
-                                <td>Cell</td>
-                                <td><input type="number"></td>
-                                <td>Cell</td>
+                                <td>Cell</td> 
+                                <td><input class="form-control-sm border" placeholder="Type here"  type="number"></td>
+                                <td>Cell </td>
                                 <td><input type="file"></td>
-                                <td><input type="file"></td>
+                                <td><input  type="file"></td>
                             </tr>
                         </tbody>
                     </table>
