--- a/Compras/OCProveedores.html
+++ b/Compras/OCProveedores.html
@@ -117,26 +117,27 @@
         <div id="content" class="content-column">
             <div class="tarjeta row-direction">
                 <div>
-                    <h6 id="selectReq">OC Cliente:</h6><select>
+                    <h6 class="fw-semibold mb-2" id="selectReq">OC Cliente:</h6>
+                    <select class="form-control-sm">
                         <option value="13">Req 224-2024: numero de OC</option>
                         <option value="14">This is item 3</option>
                     </select>
                 </div>
                 <div>
-                    <h6>Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search-1" class="search-input" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                    <h6  class="fw-semibold mb-2">Buscar:</h6>
+                    <div class="input-div search"><input type="search" id="input-search-1" class="search-input form-control-sm" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
                         </svg></div>
                 </div>
                 <div>
-                    <h6>Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input" type="date"></div>
+                    <h6  class="fw-semibold mb-2">Fecha inicial:</h6>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
                 </div>
                 <div>
-                    <h6>Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input" type="date"></div>
+                    <h6  class="fw-semibold mb-2">Fecha final:</h6>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
@@ -250,64 +251,66 @@
             <div id="tarjetaDetalles" class="tarjeta content-column">
                 <div class="card-title-group">
                     <h4>Detalles de orden de compra</h4>
-                    <div class="corner-group"><button class="btn" id="btnCancelarOC" type="button">Cancelar</button><button class="btn btn-primary" id="btnGuardarOC" type="button">Guardar</button><button class="btn b" id="btnEditarOC" type="button">Editar</button></div>
+                    <div class="corner-group"><button class="btn fw-semibold" id="btnCancelarOC" type="button">Cancelar</button><button class="btn fw-semibold btn-primary" id="btnGuardarOC" type="button">Guardar</button><button class="btn b fw-semibold" id="btnEditarOC" type="button">Editar</button></div>
                 </div>
                 <div class="info-row">
                     <div class="info-detail">
-                        <h6>ID:</h6>
+                        <h6 class="fw-semibold">ID:</h6>
                         <p id="ocID" class="align-right">5</p>
                     </div>
                     <div class="info-detail">
-                        <h6>Número OC:</h6>
+                        <h6 class="fw-semibold">Número OC:</h6>
                         <p id="ocNumero" class="align-right">OCb748a358-0908260724</p>
                     </div>
                     <div class="info-detail">
-                        <h6>Estado</h6><select id="ocEstado">
+                        <h6 class="fw-semibold">Estado</h6>
+                        <select id="ocEstado" class="form-control-sm ">
                             <option value="Entregada">Entregada</option>
                         </select>
                     </div>
                 </div>
                 <div class="info-row">
                     <div class="info-detail">
-                        <h6>Garantia:</h6><input type="text" id="ocGarantia" value="1 año">
+                        <h6 class="fw-semibold">Garantia:</h6><input type="text" id="ocGarantia" value="1 año">
                     </div>
                     <div class="info-detail">
-                        <h6>Lugar de entrega:</h6><select id="ocLugarEntrega">
+                        <h6 class="fw-semibold">Lugar de entrega:</h6>
+                        <select id="ocLugarEntrega" class="form-control-sm">
                             <option value="Entregada">Tapytop SAC: Jr. Tacna Mza. 4a Lote. 1b Tablada de Lurin. VMT ()</option>
                         </select>
                     </div>
                 </div>
                 <div class="info-row">
                     <div class="info-detail">
-                        <h6>Fecha de registro</h6>
+                        <h6 class="fw-semibold">Fecha de registro</h6>
                         <p id="ocFechaRegistro" class="align-right">24/7/2024 18:18:00</p>
                     </div>
                     <div class="info-detail">
-                        <h6>Fecha de pedido:</h6>
+                        <h6 class="fw-semibold">Fecha de pedido:</h6>
                         <p id="ocFechaPedido" class="align-right">24/7/2024 18:18:00</p>
                     </div>
                     <div class="info-detail">
-                        <h6>OC entregada:</h6><input id="ocEntregada" type="date">
+                        <h6 class="fw-semibold">OC entregada:</h6><input class=" form-control-sm border  "  id="ocEntregada" type="date">
                     </div>
                 </div><a id="ocPDF" class="link-p" href="#">
-                    <h6>OC PDF</h6>
+                    <h6 class="fw-semibold">OC PDF</h6>
                 </a>
                 <div class="info-row">
                     <div class="info-detail">
-                        <h6>Moneda:</h6>
+                        <h6 class="fw-semibold">Moneda:</h6>
                         <p id="ocMoneda" class="align-right">Soles</p>
                     </div>
                     <div class="info-detail">
-                        <h6>Valor sin IGV:</h6>
+                        <h6 class="fw-semibold">Valor sin IGV:</h6>
                         <p id="ocValor" class="align-right">1,377.10</p>
                     </div>
                     <div class="info-detail">
-                        <h6>IGV:</h6>
+                        <h6 class="fw-semibold">IGV:</h6>
                         <p id="ocIGV" class="align-right">1,377.10</p>
                     </div>
                 </div>
                 <div class="info-detail">
-                    <h6 id="ocAbonosTitulo">Abonos:&nbsp;<span id="countAbonos">n</span></h6><button class="btn" id="btnNuevoAbono" type="button">Solicitar abonos</button>
+                    <h6 class="fw-semibold" id="ocAbonosTitulo">Abonos:&nbsp;<span id="countAbonos">n</span></h6><button class=" btn fw-bold" id="btnNuevoAbono" type="button">Solicitar abonos</button>
                 </div>
                 <div class="table-responsive" id="tblAbonos">
                     <table class="table">
@@ -339,7 +342,7 @@
                     </table>
                 </div>
                 <div class="info-detail">
-                    <h6 id="ocFacturasTitulo">Facturas:&nbsp;<span id="countFacturas">n</span></h6><button class="btn" id="btnNuevaFactura" type="button">Añadir factura</button>
+                    <h6 class="fw-semibold" id="ocFacturasTitulo">Facturas:&nbsp;<span id="countFacturas">n</span></h6><button class="btn fw-bold" id="btnNuevaFactura" type="button">Añadir factura</button>
                 </div>
                 <div class="table-responsive" id="tblFacturas">
                     <table class="table">
@@ -374,27 +377,27 @@
                     </table>
                 </div>
                 <div class="info-detail">
-                    <h6>Productos:&nbsp;<span id="countProductos">n</span></h6><button class="btn" id="btnTodosLogistica" type="button">Añadir todos a logistica</button>
+                    <h6 class="fw-semibold">Productos:&nbsp;<span id="countProductos">n</span></h6><button class="btn fw-bold" id="btnTodosLogistica" type="button">Añadir todos a logistica</button>
                 </div>
                 <div class="info-even-row border" style="padding: 16px;">
-                    <div>
-                        <h6>Descripción producto proveedor 1</h6>
+                    <div class="d-flex flex-column gap-2 mt-3">
+                        <h6 class="fw-semibold">Descripción producto proveedor 1</h6>
                         <div class="info-detail">
-                            <h6>Oferta:</h6>
+                            <h6 class="fw-semibold">Oferta:</h6>
                             <p id="ocMoneda-1" class="align-right">ID</p>
                         </div>
                         <div class="info-detail">
-                            <h6>Cantidad:</h6>
+                            <h6  class="fw-semibold">Cantidad:</h6>
                             <p id="ocMoneda-2" class="align-right">cantidad unidad</p>
                         </div>
                         <div class="info-detail">
-                            <h6>Fecha de entrega:</h6>
+                            <h6  class="fw-semibold">Fecha de entrega:</h6>
                             <p id="ocMoneda-3" class="align-right">24/7/2024 </p>
                         </div>
                     </div>
-                    <div>
-                        <div class="info-detail">
-                            <h6>En logistica:</h6><button class="btn" type="button">Agregar a logística</button>
+                    <div class="d-flex flex-column gap-3 ">
+                        <div class="info-detail ">
+                            <h6 class="fw-semibold">En logistica:</h6><button class="btn fw-bold" type="button">Agregar a logística</button>
                         </div>
                         <div class="table-responsive">
                             <table class="table">
@@ -422,24 +425,24 @@
                     </div>
                 </div>
                 <div class="info-even-row border" style="padding: 16px;">
-                    <div>
-                        <h6>Descripción producto proveedor 2</h6>
+                    <div class="d-flex flex-column gap-2 mt-3">
+                        <h6 class="fw-semibold">Descripción producto proveedor 2</h6>
                         <div class="info-detail">
-                            <h6>Oferta:</h6>
+                            <h6  class="fw-semibold">Oferta:</h6>
                             <p id="ocMoneda-4" class="align-right">ID</p>
                         </div>
                         <div class="info-detail">
-                            <h6>Cantidad:</h6>
+                            <h6  class="fw-semibold">Cantidad:</h6>
                             <p id="ocMoneda-5" class="align-right">cantidad unidad</p>
                         </div>
                         <div class="info-detail">
-                            <h6>Fecha de entrega:</h6>
+                            <h6  class="fw-semibold">Fecha de entrega:</h6>
                             <p id="ocMoneda-6" class="align-right">24/7/2024 </p>
                         </div>
                     </div>
-                    <div>
+                    <div  class="d-flex flex-column gap-3 ">
                         <div class="info-detail">
-                            <h6>En logistica:</h6><button class="btn" type="button">Agregar a logística</button>
+                            <h6 class="fw-semibold">En logistica:</h6><button class="btn fw-bold" type="button">Agregar a logística</button>
                         </div>
                         <div class="table-responsive">
                             <table class="table">
@@ -469,7 +472,7 @@
             </div>
             <div class="tarjeta">
                 <div class="card-title-group">
-                    <h4>Revisar precios:&nbsp;<span id="countRevision">n</span></h4><button class="btn" id="btnGenerarOC" type="button">Generar OC</button>
+                    <h4>Revisar precios:&nbsp;<span id="countRevision">n</span></h4><button class="btn fw-bold" id="btnGenerarOC" type="button">Generar OC</button>
                 </div>
                 <div class="table-responsive" id="tblRevisarPrecios">
                     <table class="table">
