Administracion.html css added

--- a/Administracion.html
+++ b/Administracion.html
@@ -115,14 +115,14 @@
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Administración: Dashboard</h3>
-            <div class="btn-group" role="group"><a class="btn" role="button" href="Administracion/Documentos.html">Documentos</a><a class="btn" role="button" href="Administracion/Conciliacion.html">Conciliación bancaria</a></div>
+            <div class="btn-group" role="group"><a class="btn fw-bold" role="button" href="Administracion/Documentos.html">Documentos</a><a class="btn fw-bold" role="button" href="Administracion/Conciliacion.html">Conciliación bancaria</a></div>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta">
                 <h4>Estado de administración</h4>
                 <div id="admin-tarjetas-grupo" class="admin-tarjetas-grupo">
                     <div class="card card-border admin-tarjeta">
-                        <h6 class="card-title">Guias de remisión</h6>
+                        <h6 class="card-title fw-semibold">Guias de remisión</h6>
                         <div class="card-body admin-tarjeta-limpia"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mood-smile-beam text-warning check-admin">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M12 21a9 9 0 1 1 0 -18a9 9 0 0 1 0 18z"></path>
@@ -139,7 +139,7 @@
                         <h4 class="total-facturas">Guias:&nbsp;<span id="countGuias">n</span></h4>
                     </div>
                     <div class="card card-border admin-tarjeta">
-                        <h6 class="card-title">Facturas vencidas de clientes sin cobrar</h6>
+                        <h6 class="card-title fw-semibold">Facturas vencidas de clientes sin cobrar</h6>
                         <div class="card-body admin-tarjeta-limpia"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mood-smile-beam text-warning check-admin">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M12 21a9 9 0 1 1 0 -18a9 9 0 0 1 0 18z"></path>
@@ -156,7 +156,7 @@
                         <h4 class="total-facturas">Facturas:&nbsp;<span id="countFacturasClientes">n</span></h4>
                     </div>
                     <div class="card card-border admin-tarjeta">
-                        <h6 class="card-title">Facturas de proveedores faltantes</h6>
+                        <h6 class="card-title fw-semibold">Facturas de proveedores faltantes</h6>
                         <div class="card-body admin-tarjeta-limpia"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mood-smile-beam text-warning check-admin">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M12 21a9 9 0 1 1 0 -18a9 9 0 0 1 0 18z"></path>
@@ -173,7 +173,7 @@
                         <h4 class="total-facturas">Facturas:&nbsp;<span id="countFacturasProveedores">n</span></h4>
                     </div>
                     <div class="card card-border admin-tarjeta">
-                        <h6 class="card-title">Discrepancias en OC a proveedores</h6>
+                        <h6 class="card-title fw-semibold">Discrepancias en OC a proveedores</h6>
                         <div class="card-body admin-tarjeta-limpia"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mood-smile-beam text-warning check-admin">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M12 21a9 9 0 1 1 0 -18a9 9 0 0 1 0 18z"></path>
@@ -190,7 +190,7 @@
                         <h4 class="total-facturas">OC:&nbsp;<span id="countOCProveedores">n</span></h4>
                     </div>
                     <div class="card card-border admin-tarjeta">
-                        <h6 class="card-title">OC de clientes sin facturar</h6>
+                        <h6 class="card-title fw-semibold">OC de clientes sin facturar</h6>
                         <div class="card-body admin-tarjeta-limpia"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mood-smile-beam text-warning check-admin">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M12 21a9 9 0 1 1 0 -18a9 9 0 0 1 0 18z"></path>
@@ -208,11 +208,11 @@
                     </div>
                 </div>
             </div>
-            <div id="s" class="tarjeta row-direction">
+            <div id="s" class="tarjeta row-direction ">
                 <div>
                     <h2 class="text-start content-card-title">Seguimiento de vencimientos</h2>
-                    <div class="info-even-row"><button class="btn btn-primary" id="prev-month" type="button">Button 2</button>
-                        <h4 id="month-title" class="text-centered">Heading</h4><button class="btn btn-primary" id="next-month" type="button">Button 2</button>
+                    <div class="info-even-row"><button class="btn btn-primary fw-bold text-white  " id="prev-month" type="button">Button 2</button>
+                        <h4 id="month-title" class="text-centered">Heading</h4><button class="btn btn-primary text-white fw-bold" id="next-month" type="button">Button 2</button>
                     </div>
                     <div id="calendar" class="my-3 calendar-container&quot;">
                         <div class="calendar-header d-flex">
@@ -227,7 +227,7 @@
                     </div>
                 </div>
                 <div>
-                    <h3 class="text-center" id="selected-date">Vencimientos de 13/04/2024</h3>
+                    <h3 class="text-center mb-3  fw-bold" id="selected-date">Vencimientos de 13/04/2024</h3>
                     <div class="p2">
                         <table class="table table-bordered mt-3 stripe" id="tabla-vencimientos">
                             <thead class="p1">
