/index.html css added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <form class="text-center" method="POST">
                 <div class="mb-3"><input class="form-control" type="text" id="txt_usuario" name="usuario" placeholder="Usuario"></div>
                 <div class="mb-3"><input class="form-control code" type="password" id="txt_password" name="password" placeholder="Contraseña"></div>
-                <div class="mb-3"><button class="btn btn-primary d-block w-100 btn_login" id="btnIniciarSesion" type="button" name="submit">Iniciar sesión</button></div><a class="text-muted" href="mailto:sistemasfigsac@gmail.com">¿Olvidaste tu contraseña?</a>
+                <div class="mb-3"><button class="btn btn-primary fw-semibold d-block w-100 btn_login" id="btnIniciarSesion" type="button" name="submit">Iniciar sesión</button></div><a class="text-muted fw-semibold" href="mailto:sistemasfigsac@gmail.com">¿Olvidaste tu contraseña?</a>
             </form>
         </div>
     </section>
