nicio.html more css added

--- a/Inicio.html
+++ b/Inicio.html
@@ -176,7 +176,7 @@
             </div>
             <div class="info-even-row todo row">
                 <div class="col-6 p-4 rounded-4 bg-white">
-                    <h5 class="text-center">Por hacer:&nbsp;<span id="countPorHacer">n</span></h5>
+                    <h5 class="text-center fw-bold mb-3">Por hacer:&nbsp;<span id="countPorHacer">n</span></h5>
                     <div class="table-responsive">
                         <table class="table" id="tblPorHacer">
                             <thead>
@@ -203,7 +203,7 @@
                     </div>
                 </div>
                 <div class="col-6 p-4 rounded-4 bg-white">
-                    <h5 class="text-center">En progreso:&nbsp;<span id="countEnProgreso">n</span></h5>
+                    <h5 class="text-center fw-bold mb-3">En progreso:&nbsp;<span id="countEnProgreso">n</span></h5>
                     <div class="table-responsive">
                         <table class="table" id="tblProgreso">
                             <thead>
@@ -230,7 +230,7 @@
                     </div>
                 </div>
                 <div class="col-6 p-4 rounded-4 bg-white">
-                    <h5 class="text-center">Completo:&nbsp;<span id="countCompleto">n</span></h5>
+                    <h5 class="text-center fw-bold mb-3">Completo:&nbsp;<span id="countCompleto">n</span></h5>
                     <div class="table-responsive">
                         <table class="table" id="tblCompleto">
                             <thead>
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="col-6 p-4 rounded-4 bg-white">
-                    <h5 class="text-center">Congelado:&nbsp;<span id="countCongelado">n</span></h5>
+                    <h5 class="text-center fw-bold mb-3">Congelado:&nbsp;<span id="countCongelado">n</span></h5>
                     <div class="table-responsive">
                         <table class="table" id="tblCongelado">
                             <thead>
