Requerimientos.html css added

--- a/Logistica.html
+++ b/Logistica.html
@@ -115,7 +115,7 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Logística: Dashboard</h3><a class="btn" role="button" id="btnMovimientos">Todos los movimientos</a>
+            <h3 id="page-title">Logística: Dashboard</h3><a class="btn fw-bold" role="button" id="btnMovimientos">Todos los movimientos</a>
         </div>
         <div id="content">
             <div class="tarjeta">
