Ventas.html css added

--- a/Ventas.html
+++ b/Ventas.html
@@ -116,7 +116,7 @@
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Ventas: Dashboard</h3>
-            <div class="btn-group" role="group"><a class="btn" role="button" href="Ventas/AnadirRequerimientos.html">Añadir requerimientos</a><a class="btn" role="button" href="Ventas/OCClientes.html">Añadir OC clientes</a></div>
+            <div class="btn-group" role="group"><a class="btn fw-bold" role="button" href="Ventas/AnadirRequerimientos.html">Añadir requerimientos</a><a class="btn fw-bold" role="button" href="Ventas/OCClientes.html">Añadir OC clientes</a></div>
         </div>
         <div id="content">
             <div class="tarjeta">
