Documentos.html  responsive done

--- a/Administracion/Conciliacion.html
+++ b/Administracion/Conciliacion.html
@@ -134,8 +134,8 @@
                     <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
                 </div>
             </div>
-            <div class="info-even-row">
-                <div class="tarjeta">
+            <div class="info-even-row info-even-row-update">
+                <div class="tarjeta ">
                     <div class="card-title-group">
                         <h4>Registro de bancos</h4><button class="btn b fw-bold" id="btnImportar" type="button">Importar reporte</button>
                     </div>
@@ -206,7 +206,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tarjeta">
+            <div class="tarjeta ">
                 <h4>Conciliación</h4>
                 <div class="info-even-row">
                     <div class="card card-border admin-tarjeta">
