Requerimientos.html responsive done

--- a/Logistica.html
+++ b/Logistica.html
@@ -115,9 +115,9 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Logística: Dashboard</h3><a class="btn fw-bold" role="button" id="btnMovimientos">Todos los movimientos</a>
+            <h3 id="page-title">Logística: Dashboard</h3><a class="btn fw-bold secondary-btn" role="button" id="btnMovimientos">Todos los movimientos</a>
         </div>
-        <div id="content">
+        <div id="content" class="content-mob">
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4>Nuevas OCs:&nbsp;<span id="countNuevaOC">n</span></h4>
