--- a/Ventas/AnadirOCClientes.html
+++ b/Ventas/AnadirOCClientes.html
@@ -114,13 +114,13 @@
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Ventas: Añadir orden de compra cliente</h3>
-            <div class="btn-group" role="group"><a class="btn btn-secondary" role="button" href="Ventas/Dashboard.html">Cancelar</a><a class="btn btn-primary" role="button" id="btnGuardar">Guardar</a></div>
+            <div class="btn-group" role="group"><a class="btn secondary-btn " role="button" href="Ventas/Dashboard.html">Cancelar</a><a class="btn btn-primary" role="button" id="btnGuardar">Guardar</a></div>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta row-direction">
                 <div>
                     <h6 class="fw-semibold mb-2">Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search" class="search-input form-control-sm" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                    <div class="input-div search"><input type="search" id="input-search" class="search-input form-control-sm placeholder" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
@@ -128,11 +128,11 @@
                 </div>
                 <div>
                     <h6  class="fw-semibold mb-2">Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm placeholder" type="date"></div>
                 </div>
                 <div>
                     <h6  class="fw-semibold mb-2">Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm placeholder" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
