Analisis.html responsive done

--- a/Ventas/AnadirRequerimientos.html
+++ b/Ventas/AnadirRequerimientos.html
@@ -114,7 +114,7 @@
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Ventas: Añadir requerimiento</h3>
-            <div class="btn-group" role="group"><a class="btn fw-bold" role="button" href="Ventas.html">Cancelar</a><a class="btn btn-primary fw-bold" role="button" id="btnGuardar">Guardar</a></div>
+            <div class="btn-group" role="group"><a class="btn fw-bold secondary-btn" role="button" href="Ventas.html">Cancelar</a><a class="btn btn-primary fw-bold" role="button" id="btnGuardar">Guardar</a></div>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta">
@@ -308,7 +308,7 @@
                     </div>
                 </div>
                 <div class="info-detail">
-                    <h6 class="fw-semibold">Planilla:&nbsp;<span id="countPlanilla">n</span></h6><button class="btn fw-bold" id="btnNuevoProducto" type="button">Añadir producto</button>
+                    <h6 class="fw-semibold">Planilla:&nbsp;<span id="countPlanilla">n</span></h6><button class="btn fw-bold secondary-btn" id="btnNuevoProducto" type="button">Añadir producto</button>
                 </div>
                 <div class="table-responsive" id="tblPlanilla">
                     <table class="table">
